--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <header id="header" class=" header d-flex flex-md-row fixed-top">
-    <nav class="d-inline-flex">
+  <header id="header" class="conteiner-fluid header d-flex flex-md-row fixed-top">
+    <nav class="d-inline-flex mb-2">
     <a href="index.html" class="d-flex text-dark text-decoration-none">
-      <img id="header-img" src="https://i.ibb.co/QfjG7Lg/m-pixlr-bg-result-1-1.png" width="60" height="60" alt="">
-      <span class="fs-2 mt-2"><b>NetCat, Inc.</b></span>
+      <img class="mt-3" id="header-img" src="https://i.ibb.co/QfjG7Lg/m-pixlr-bg-result-1-1.png" width="60" height="60" alt="">
+      <span class="fs-2 mt-4"><b>NetCat, Inc.</b></span>
     </a>
   </nav>
     <nav id="nav-bar" class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
@@ -23,26 +23,31 @@
     </nav>
   </header>
   <main>
-    <div id="myCarousel" class="carousel slide bg-inverse w-50git  ms-auto me-auto" data-bs-ride="carousel">
-      <div class="carousel-inner" role="listbox">
+    <div id="carouselExampleIndicators" class="container-fluid carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="img-fluid banner" src="/images/banner.jpg" alt="First slide">
+          <img src="/images/banner.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img class="img-fluid banner" src="/images/banner2.png" alt="Second slide">
+          <img src="/images/banner2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img class="img-fluid banner" src="images/banner3.jpg" alt="Third slide">
+          <img src="/images/banner3.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </a>
+      </button>
     </div>
     
       <h1>Diseño y desarrollo web</h1>
