--- a/index.html
+++ b/index.html
@@ -31,23 +31,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/banner.jpg" class="d-block w-100" alt="...">
+          <img src="images/banner.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/banner2.png" class="d-block w-100" alt="...">
+          <img src="images/banner2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/banner3.jpg" class="d-block w-100" alt="...">
+          <img src="images/banner3.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    
     </div>
     
       <h1>Diseño y desarrollo web</h1>
