--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
 <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <header id="header" class="conteiner-fluid header d-flex flex-md-row fixed-top">
+  <header id="header" class="header d-flex flex-md-row">
     <nav class="d-inline-flex mb-2">
     <a href="index.html" class="d-flex text-dark text-decoration-none">
       <img class="mt-3" id="header-img" src="https://i.ibb.co/QfjG7Lg/m-pixlr-bg-result-1-1.png" width="60" height="60" alt="">
       <span class="fs-2 mt-4"><b>NetCat, Inc.</b></span>
     </a>
   </nav>
-    <nav id="nav-bar" class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-      <a class="me-3 py-2 text-dark text-decoration-none nav-link" href="./index.html">Home</a>
-      <a class="me-3 py-2 text-dark text-decoration-none nav-link" href="./productos.html">Productos</a>
+    <nav id="nav-bar" class="d-inline-flex mt-3 mt-md-0 ms-md-auto">
+      <a class="me-3 mt-2 text-dark text-decoration-none nav-link" href="./index.html">Home</a>
+      <a class="me-3 mt-2 text-dark text-decoration-none nav-link"  href="./producto.html">Productos</a>
+      <a class="me-3 text-dark text-decoration-none nav-link" href="#" tabindex="-1" aria-disabled="true">
+        <button class="btn" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <img src="images/carrito-person.png" class="" alt="..."><i
+                class="bi bi-handbag" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>
+        </button>
+    </a>
     </nav>
   </header>
   <main>
-    <div id="carouselExampleIndicators" class="container-fluid carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -31,10 +39,10 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/banner.jpg" class="d-block w-100" alt="...">
+          <img src="images/banner.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/banner2.png" class="d-block w-100" alt="...">
+          <img src="images/banner2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="images/banner3.jpg" class="d-block w-100" alt="...">
@@ -45,18 +53,66 @@
     
       <h1>Diseño y desarrollo web</h1>
       <div class="container wrapper">
-        <button name="boton" class="btn btn-light" type="submit">
+        <a href="producto.html" id="back" type="submit">
           <img src="images/backend.png" class="img-fluid izquierda" alt="">
-        </button>
-        <button name="boton" class="btn btn-light" type="submit">
+        </a>
+        <a href="producto.html" id="front" type="submit">
           <img src="images/frontend.png" class="img-fluid derecha" alt="">
-        </button>
+        </a>
       </div>
       <h2>Seleccione una categoria:</h2>
       <div class="container separador"></div>
-      <iframe class="row container video" width="560" height="315" src="https://www.youtube.com/embed/9b0fAMlDe4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <h3>Video cortesia de <a href="https://www.youtube.com/channel/UCCWF25mcVP25_zQLyXzXu5g">coderos.</a></h3>
-  </main>
+      <iframe class="row container video" width="560" height="415" src="https://www.youtube.com/embed/9b0fAMlDe4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>Video cortesia de <a href="https://www.youtube.com/channel/UCntU2yK1LgP67zlgQku32Eg">Expert Market.</a></h3>
+
+      <!--OffCanvas Para el Carrito de Compras-->
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+      aria-labelledby="offcanvasRightLabel">
+      <div class="offcanvas-header">
+          <div class="row align-items-center ">
+              <div class="col mt-5">
+                  <img src="./images/carrito-person.png" alt="">
+              </div>
+              <div class="col mt-5">
+                  <h5>Crown Sweatshirt</h5>
+                  <h6>S $85.00</h6>
+              </div>
+              <div class="col text-center mt-5">
+                  <p id="amount" class="mt-3">1<img class="img-fluid" src="./images/Line.png" alt="">
+                      <span id="remove">Remove</span>
+                  </p>
+              </div>
+          </div>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+          <div class="container px-4 pt-5 pb-5">
+              <div class="row gx-5">
+                  <div class="col">
+                      <p class="text-start flex-row-reverse">Subtotal</p>
+                  </div>
+                  <div class="col">
+                      <p id="valor" class="text-end">$85.00</p>
+                  </div>
+              </div>
+          </div>
+          <p class="text-center" style="font-size: 12px; line-height: 24px;">Shipping, taxes, and discount
+              codes
+              calculated at checkout.</p>
+          <!--Boton Check-Out/OffCanvas-->
+          <div class="d-grid gap-2">
+              <button id="check-out" class="btn btn-primary" type="button">CHECK OUT</button>
+          </div>
+          <div class="container text-center">
+              <p class="fw-bold mt-5" style="font-size: 15px;">Please Note: All items are pre-order and
+                  will ship
+                  in 6-10 weeks. Guaranteed
+                  holiday delivery.</p>
+          </div>
+      </div>
+  </div>
+    </main>
 <footer class="panel-footer footer fixed-bottom">
   <div class="div-footer container">
     2021 &copy; Copyright <strong><span>Academia Geek</span></strong>
@@ -65,4 +121,6 @@
 </footer>  
 </body>    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+<script type="module" src="scripts/index.js"></script>
 </html>
