--- a/detalle.html
+++ b/detalle.html
@@ -36,7 +36,7 @@
     <div class="nombre"></div>
     <div class="destacado">
       <div class="destacado-detalles">
-        <ul class="minDetalles coincidencia año duracion">
+        <ul class="minDetalles precio categoria duracion">
         </ul>
 
         <div class="play">
@@ -60,7 +60,7 @@
     </div>
     <div class="descripcion"> 
   </div>
-    <div class="elenco director">
+    <div class="valoracion instructor">
   </div>
 
 
