--- a/producto.html
+++ b/producto.html
@@ -48,7 +48,7 @@
               </div>
           </div>
           <div class="offcanvas-body">
-              <div class="shopping-cart-items shoppingCartItemsContainer">
+              <div class="shopping-cart-items shoppingCartItemsContainer" id="lista-carrito">
                   
               </div>
               
