ajustes de links de imagenes

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/banner.png" class="d-block w-100" alt="...">
+          <img src="https://i.ibb.co/W2Y9z4r/banner.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+          <img src="https://i.ibb.co/FX6fbLs/banner2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/banner3.jpg" class="d-block w-100" alt="...">
+          <img src="https://i.ibb.co/m9F6r7s/banner3.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
     
@@ -54,10 +54,10 @@
       <h1>Diseño y desarrollo web</h1>
       <div class="container wrapper">
         <a href="producto.html" id="back" type="submit">
-          <img src="images/backend.png" class="img-fluid izquierda" alt="">
+          <img src="https://i.ibb.co/VYT2dc4/backend.png" class="img-fluid izquierda" alt="">
         </a>
         <a href="producto.html" id="front" type="submit">
-          <img src="images/frontend.png" class="img-fluid derecha" alt="">
+          <img src="https://i.ibb.co/8P9Dyp8/frontend.pngg" class="img-fluid derecha" alt="">
         </a>
       </div>
       <h2>Seleccione una categoria:</h2>
